--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,7 +3,7 @@
     padding: 0;
     font-family: 'Mulish', sans-serif;
 }
-header{
+header,main{
     width: 1440px;
     margin: 0 auto;
     border: 1px solid red;
@@ -73,6 +73,12 @@ nav li a{
     font-weight: 400;
     margin-bottom: 64px;
 }
+.text{
+    color:rgba(19, 19, 24, 0.70) ;
+    font-size: 16px;
+    font-weight: 400;
+
+}
 .explore-box{
     height: 84px;
     width: 800px;
@@ -105,4 +111,24 @@ nav li a{
     cursor: pointer;
     
     
+}
+.o-p-t{
+    display: flex;
+    padding-top: 100px;
+    gap: 53px;
+    justify-content: space-between;
+    padding-right: 135px ;
+    padding-left: 135px;
+}
+.o-p-t-d{
+    color: #131318;
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 30px;
+    
+    
+}
+.o-p-t-d li{
+    padding-left: 20px;
+    list-style: none;
 }
