--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,10 +3,10 @@
     padding: 0;
     font-family: 'Mulish', sans-serif;
 }
-header,main{
+header,main,footer{
     width: 1440px;
     margin: 0 auto;
-    border: 1px solid red;
+   
     font-family: 'Mulish', sans-serif;
 }
 
@@ -301,6 +301,7 @@ nav li a{
     margin-left: 135px;
     margin-right: 135px;
     display: flex;
+    margin-bottom: 100px;
 }
 .form{
     width: 434px;
@@ -380,9 +381,44 @@ nav li a{
     margin-left:290px;
 }
 
+footer{
+    height: 502px;
+    text-align: center;
+    padding-top: 130px;
+    background: rgba(19, 19, 24, 0.05);
+    
+}
+.f-title{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 15px;
+   
+}
+.f-c{
+    margin-top: 13px;
+}
+.icon{
+    margin-top: 50px;
+    padding-bottom: 90px;
 
+}
+.line{
+    width: 872px;
+    height: 1px;
+    background: rgba(19, 19, 24, 0.10);
+    margin-left: 284px;
+    margin-bottom: 100px;
 
-
+}
+.lastl{
+    color: #131318;
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+}
 
 
 
