--- a/styles/styles.css
+++ b/styles/styles.css
@@ -563,7 +563,7 @@ footer{
         font-weight: 400;
         line-height: 24px; /* 171.429% */
     }
-    .row-1{
+    .row-1,.g-t{
         flex-direction: column;
         
         
@@ -577,4 +577,97 @@ footer{
 
        
     }
+    .d-d-i{
+        margin-left: 15px;
+        margin-right: 10px;
+    }
+    .pic1,.pic2,.pic3{
+        width: 345px;
+        border-radius: 16px;
+    }
+    .g-t{
+        margin-top: 20px;
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+    .g-t-b1,.g-t-i,.nws{
+        width: auto;
+    }
+    .see{
+        width: 174px;
+        height: 52px;
+        flex-shrink: 0;
+        margin-bottom: 10px;
+    }
+    .g-t-i{
+        height: 200px;
+        margin-bottom: 10px;
+    }
+    .gti-text{
+        color: #FFF;
+        font-family: Mulish;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 30px; /* 150% */
+        padding-left: 30px;
+        padding-top: 60px;
+    }
+    .nws{
+        flex-direction: column;
+        margin-left: 15px;
+        gap: 16px;
+        margin-bottom: 20px;
+    }
+    .form{
+        width: 320px;
+        height: 420px;
+        padding-left: 23px;
+        padding-right: 0px;
+    }
+    .gt-in,.gt{
+        width: 275px;
+        height: 52px;
+        
+    }
+    .gt{
+        width:295px ;
+    }
+    .nws-i{
+        width: 345px;
+        height: 300px;
+        flex-shrink: 0;
+        margin-left: 0;
+    }
+    .in-img{
+        width: 214.023px;
+        height: 79.268px;
+        transform: rotate(-19.628deg);
+        flex-shrink: 0;
+        margin-left: 110px;
+
+    }
+    .s{ padding-top: 10px;
+        margin-top: 190px;
+    }
+    .w{
+        color: #FFF;
+    }
+    footer{
+        padding-top: 33px;
+        width: 410px;
+        height: 309px;
+        margin: 0;
+    }
+    .icon{
+        margin-top: 16px;
+        padding-bottom: 24px
+    }
+    .line{
+        width: 350px;
+        
+        margin-left: 20px;
+        margin-bottom: 24px;
+    }
+
 }
